<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Settings"
    android:id="@+id/parent">

    <EditText
        android:id="@+id/edtID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="177dp"
        android:layout_marginTop="304dp"
        android:defaultValue="18832"
        android:ems="10"

        android:inputType="number"
        android:padding="16dp" />

    <TextView
        android:id="@+id/txtDevID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="-1dp"
        android:layout_marginTop="306dp"
        android:padding="16dp"
        android:text="@string/device_id"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/edtSettings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:padding="16dp"
        android:text="@string/settings"
        android:textSize="50sp" />

    <TextView
        android:id="@+id/serverSet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="150dp"
        android:padding="16dp"
        android:text="@string/server_settings"
        android:textSize="30sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txtIp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="200dp"
        android:padding="16dp"
        android:text="@string/write_ip"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/txtPort"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="250dp"
        android:padding="16dp"
        android:text="@string/server_port"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/edtIP"
        android:defaultValue="tcp://broker.hivemq.com"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="180dp"
        android:layout_marginTop="200dp"
        android:ems="10"

        android:inputType="text"
        android:padding="16dp" />

    <EditText
        android:id="@+id/edtPort"
        android:defaultValue="18832"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="180dp"
        android:layout_marginTop="250dp"
        android:ems="10"

        android:inputType="number"
        android:padding="16dp" />

    <TextView
        android:id="@+id/timeSlot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="1dp"
        android:layout_marginTop="363dp"
        android:padding="16dp"
        android:text="@string/device_settings"
        android:textSize="30sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txtTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="429dp"
        android:padding="16dp"
        android:text="@string/time_slot"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/edtTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="9dp"
        android:layout_marginTop="497dp"
        android:ems="10"
        android:hint="@string/time_seconds"
        android:inputType="number"
        android:padding="16dp" />

    <Button
        android:id="@+id/save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="550dp"
        android:text="@string/save" />


    <Button
        android:id="@+id/backToSubscribe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="620dp"
        android:text="@string/back" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txtWarningID"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/backToSubscribe"
        android:textColor="@color/red"
        android:layout_marginTop="20dp"/>

</RelativeLayout>