<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:id="@+id/parent">

    <TextView
        android:id="@+id/edtTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/write_id"
        android:layout_centerInParent="true"/>

    <EditText
        android:id="@+id/edtID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/device_id"
        android:inputType="text"
        android:layout_below="@id/edtTxt"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"/>

    <Button
        android:id="@+id/edtLogIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/log_in"
        android:layout_below="@id/edtID"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txtWarningID"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/edtLogIn"
        android:textColor="@color/red"
        android:layout_marginTop="50dp"/>

</RelativeLayout>